# write_atomic

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml  msrv.yaml
src/: fallback.rs  lib.rs  linux.rs
