[package]
name = "write_atomic"
version = "0.5.3"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.73"
description = "Write to files atomically."
license = "WTFPL"
repository = "https://github.com/Blobfolio/write_atomic"
readme = "README.md"
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"justfile",
	"release",
]

[package.metadata.bashman]
name = "write_atomic"

[dependencies]
tempfile = "3.14.0"
