[package]
name = "write_atomic"
version = "0.6.0"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
rust-version = "1.87"
description = "Write to files atomically."
license = "WTFPL"
repository = "https://github.com/Blobfolio/write_atomic"
readme = "README.md"
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"justfile",
	"release",
]

[package.metadata.bashman]
name = "write_atomic"

[dependencies]
tempfile = "3.17.0"
